pkgs/id/cargo-build-output.txt
+ cargo tree -i iroh
iroh v0.95.1
├── distributed-topic-tracker v0.2.5 (https://github.com/rustonbsd/distributed-topic-tracker#c9bb5e67)
│   └── id v0.1.0 (/home/user/code/pkgs/id)
├── id v0.1.0 (/home/user/code/pkgs/id)
├── iroh-blobs v0.97.0
│   └── id v0.1.0 (/home/user/code/pkgs/id)
└── iroh-gossip v0.95.0
    ├── distributed-topic-tracker v0.2.5 (https://github.com/rustonbsd/distributed-topic-tracker#c9bb5e67) (*)
    └── id v0.1.0 (/home/user/code/pkgs/id)
+ cargo build
   Compiling id v0.1.0 (/home/user/code/pkgs/id)
warning: unused import: `fs`
  --> src/main.rs:10:13
   |
10 |     store::{fs, mem},
   |             ^^
   |
   = note: `#[warn(unused_imports)]` on by default

warning: unused import: `error`
  --> src/main.rs:16:15
   |
16 | use tracing::{error, info};
   |               ^^^^^

error[E0277]: the trait bound `anyhow::Error: StdError` is not satisfied
   --> src/main.rs:49:74
    |
49  |             postcard::from_bytes(&buf).map_err(|e| AcceptError::from_err(anyhow!(e)))?;
    |                                                    --------------------- ^^^^^^^^^^ the trait `StdError` is not implemented for `anyhow::Error`
    |                                                    |
    |                                                    required by a bound introduced by this call
    |
note: required by a bound in `AcceptError::from_err`
   --> /home/user/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/iroh-0.95.1/src/protocol.rs:127:24
    |
127 |     pub fn from_err<T: std::error::Error + Send + Sync + 'static>(value: T) -> Self {
    |                        ^^^^^^^^^^^^^^^^^ required by this bound in `AcceptError::from_err`

error[E0277]: the trait bound `anyhow::Error: StdError` is not satisfied
   --> src/main.rs:59:47
    |
59  |                         AcceptError::from_err(anyhow!(e))
    |                         --------------------- ^^^^^^^^^^ the trait `StdError` is not implemented for `anyhow::Error`
    |                         |
    |                         required by a bound introduced by this call
    |
note: required by a bound in `AcceptError::from_err`
   --> /home/user/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/iroh-0.95.1/src/protocol.rs:127:24
    |
127 |     pub fn from_err<T: std::error::Error + Send + Sync + 'static>(value: T) -> Self {
    |                        ^^^^^^^^^^^^^^^^^ required by this bound in `AcceptError::from_err`

error[E0599]: no method named `next` found for opaque type `impl futures_core::stream::Stream<Item = Result<TagInfo, iroh_blobs::api::Error>>` in the current scope
  --> src/main.rs:74:53
   |
74 |                         while let Some(item) = list.next().await {
   |                                                     ^^^^ method not found in `impl futures_core::stream::Stream<Item = Result<TagInfo, iroh_blobs::api::Error>>`
   |
   = help: items from traits can only be used if the trait is in scope
help: the following traits which provide `next` are implemented but not in scope; perhaps you want to import one of them
   |
1  + use futures_lite::stream::StreamExt;
   |
1  + use futures_util::stream::stream::StreamExt;
   |
1  + use std::iter::Iterator;
   |
1  + use std::str::pattern::Searcher;
   |

error[E0277]: the trait bound `anyhow::Error: StdError` is not satisfied
   --> src/main.rs:85:47
    |
85  |                         AcceptError::from_err(anyhow!(e))
    |                         --------------------- ^^^^^^^^^^ the trait `StdError` is not implemented for `anyhow::Error`
    |                         |
    |                         required by a bound introduced by this call
    |
note: required by a bound in `AcceptError::from_err`
   --> /home/user/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/iroh-0.95.1/src/protocol.rs:127:24
    |
127 |     pub fn from_err<T: std::error::Error + Send + Sync + 'static>(value: T) -> Self {
    |                        ^^^^^^^^^^^^^^^^^ required by this bound in `AcceptError::from_err`

error[E0277]: `MetaProtocol` doesn't implement `std::fmt::Debug`
   --> src/main.rs:44:26
    |
44  | impl ProtocolHandler for MetaProtocol {
    |                          ^^^^^^^^^^^^ the trait `std::fmt::Debug` is not implemented for `MetaProtocol`
    |
    = note: add `#[derive(Debug)]` to `MetaProtocol` or manually `impl std::fmt::Debug for MetaProtocol`
note: required by a bound in `ProtocolHandler`
   --> /home/user/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/iroh-0.95.1/src/protocol.rs:157:42
    |
157 | pub trait ProtocolHandler: Send + Sync + std::fmt::Debug + 'static {
    |                                          ^^^^^^^^^^^^^^^ required by this bound in `ProtocolHandler`
help: consider annotating `MetaProtocol` with `#[derive(Debug)]`
    |
34  + #[derive(Debug)]
35  | struct MetaProtocol {
    |

error[E0061]: this function takes 1 argument but 0 arguments were supplied
   --> src/main.rs:107:23
    |
107 |             let key = SecretKey::generate();
    |                       ^^^^^^^^^^^^^^^^^^^-- argument #1 of type `&mut _` is missing
    |
note: associated function defined here
   --> /home/user/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/iroh-base-0.95.1/src/key.rs:284:12
    |
284 |     pub fn generate<R: CryptoRng + ?Sized>(csprng: &mut R) -> Self {
    |            ^^^^^^^^
help: provide the argument
    |
107 |             let key = SecretKey::generate(/* csprng */);
    |                                           ++++++++++++

error[E0599]: no method named `push` found for reference `&Remote` in the current scope
   --> src/main.rs:190:36
    |
190 |                     store.remote().push(blobs_conn.clone(), hash).await?;
    |                                    ^^^^ method not found in `&Remote`

warning: unused import: `io::AsyncWriteExt`
  --> src/main.rs:15:24
   |
15 | use tokio::{fs as afs, io::AsyncWriteExt};
   |                        ^^^^^^^^^^^^^^^^^

Some errors have detailed explanations: E0061, E0277, E0599.
For more information about an error, try `rustc --explain E0061`.
warning: `id` (bin "id") generated 3 warnings
error: could not compile `id` (bin "id") due to 7 previous errors; 3 warnings emitted
